<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.standings.StandingsActivity">


    <TextView
        android:layout_marginStart="10dp"
        android:id="@+id/lnr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/team"
        android:textSize="15sp"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/guide"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="25dp"
            android:layout_height="wrap_content"
            android:text="@string/pl"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            />

        <TextView
            android:layout_width="25dp"
            android:layout_height="wrap_content"
            android:text="@string/w"
            android:layout_marginStart="3dp"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            />

        <TextView
            android:layout_width="25dp"
            android:layout_height="wrap_content"
            android:text="@string/d"
            android:layout_marginStart="3dp"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            />


        <TextView
            android:layout_width="25dp"
            android:layout_height="wrap_content"
            android:text="@string/l"
            android:layout_marginStart="3dp"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            />

        <TextView
            android:layout_width="25dp"
            android:layout_height="wrap_content"
            android:text="@string/f"
            android:layout_marginStart="3dp"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            />

        <TextView
            android:layout_width="25dp"
            android:layout_height="wrap_content"
            android:text="@string/a"
            android:layout_marginStart="3dp"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            />

        <TextView
            android:layout_width="25dp"
            android:layout_height="wrap_content"
            android:text="@string/gd"
            android:layout_marginStart="3dp"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            />

        <TextView
            android:layout_width="25dp"
            android:layout_height="wrap_content"
            android:text="@string/pts"
            android:layout_marginStart="3dp"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_standings"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="25dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:listitem="@layout/item_table">

    </androidx.recyclerview.widget.RecyclerView>

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="160dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
