<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/bgPoster"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="#313347"
            >

            <ImageView
                android:id="@+id/imgPoster"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorbg"
                />

            <ImageView
                android:id="@+id/imgBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/ic_chevron_left" />

            <ImageView
                android:id="@+id/imgMenu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="16dp"
                android:src="@drawable/ic_more_vert_white"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#40313347"
                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="50dp"
                android:layout_alignParentBottom="true"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvLeagueName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/league_name"
                    android:textColor="@color/colorTextWhite"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tvLeagueDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorTextExtraLight"
                    android:ellipsize="end"
                    android:maxLines="5"
                    android:text="@string/league_description" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/lnrtx"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="15dp"
                android:orientation="horizontal"
                android:weightSum="2"
                app:layout_constraintBottom_toBottomOf="parent">

                <TextView
                    android:id="@+id/previousMatch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/last_match"
                    android:textColor="@color/colorTextWhite"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/nextMatch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/next_match"
                    android:textColor="@color/colorTextWhite"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2"
                android:layout_alignParentBottom="true"
                >

                <LinearLayout
                    android:id="@+id/undPreviousMatch"
                    android:layout_width="100dp"
                    android:layout_height="5dp"
                    android:layout_weight="1"
                    android:background="@color/colorTextWhite"
                    android:orientation="horizontal" />

                <LinearLayout
                    android:id="@+id/undNextMatch"
                    android:layout_width="100dp"
                    android:layout_height="5dp"
                    android:layout_weight="1"
                    android:background="@color/colorTextWhite"
                    android:orientation="horizontal"
                    android:visibility="invisible" />

            </LinearLayout>

        </RelativeLayout>

        <FrameLayout
            android:id="@+id/containerDetail"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/bgPoster"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>